stateDiagram-v2
    [*] --> Open : BufferedInputStream BufferedInputStream([InputStream in])
    [*] --> Open : BufferedInputStream BufferedInputStream([InputStream in], [int size])

    Open --> Open : int read()
    Open --> Open : int read([byte[] b], [int off], [int len])
    Open --> Open : long skip([long n])
    Open --> Open : int available()
    Open --> Open : boolean markSupported()
    Open --> Marked : void mark([int readlimit])

    Marked --> Marked : int read()
    Marked --> Marked : int read([byte[] b], [int off], [int len])
    Marked --> Marked : long skip([long n])
    Marked --> Marked : int available()
    Marked --> Marked : boolean markSupported()
    Marked --> Marked : void mark([int readlimit])
    Marked --> Marked : void reset()

    Open --> Closed : void close()
    Marked --> Closed : void close()
    Closed --> Closed : void close()

    Closed --> [*]

    note right of Open
        No mark set (markpos == -1).
        reset() is not valid in this state.
    end note

    note right of Marked
        mark() has been called; markpos >= 0.
        reset() repositions to mark position.
        Re-calling mark() updates the mark position.
    end note

    note right of Closed
        Terminal state. close() is idempotent.
        read(), skip(), available(), reset() all throw IOException.
    end note
